Vertical align in Firefox fixed

--- a/assets/style/_responsive.scss
+++ b/assets/style/_responsive.scss
@@ -15,4 +15,8 @@
 			font-size: 1.4rem;
 		}
 	}
+
+	article {
+		height: 85%;
+	}
 }
